built/internal/parser.js
// Generated by Peggy 1.2.0.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length);
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1)
          + peg$padEnd("", last - s.column, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { fullParser: peg$parsefullParser, inlineParser: peg$parseinlineParser, plainParser: peg$parseplainParser };
  var peg$startRuleFunction = peg$parsefullParser;

  var peg$c0 = ">";
  var peg$c1 = "[";
  var peg$c2 = "\u691C\u7D22";
  var peg$c3 = "search";
  var peg$c4 = "]";
  var peg$c5 = "```";
  var peg$c6 = "\\[";
  var peg$c7 = "\\]";
  var peg$c8 = "<center>";
  var peg$c9 = "</center>";
  var peg$c10 = "<right>";
  var peg$c11 = "</right>";
  var peg$c12 = ":";
  var peg$c13 = ":@";
  var peg$c14 = "@";
  var peg$c15 = "***";
  var peg$c16 = "**";
  var peg$c17 = "<b>";
  var peg$c18 = "</b>";
  var peg$c19 = "__";
  var peg$c20 = "<sup>";
  var peg$c21 = "</sup>";
  var peg$c22 = "<sub>";
  var peg$c23 = "</sub>";
  var peg$c24 = "<small>";
  var peg$c25 = "</small>";
  var peg$c26 = "<i>";
  var peg$c27 = "</i>";
  var peg$c28 = "*";
  var peg$c29 = "_";
  var peg$c30 = "~~";
  var peg$c31 = "~";
  var peg$c32 = "<s>";
  var peg$c33 = "</s>";
  var peg$c34 = "`";
  var peg$c35 = "\\(";
  var peg$c36 = "\\)";
  var peg$c37 = "-";
  var peg$c38 = "#";
  var peg$c39 = "\uFE0F";
  var peg$c40 = "\u20E3";
  var peg$c41 = "(";
  var peg$c42 = ")";
  var peg$c43 = "\u300C";
  var peg$c44 = "\u300D";
  var peg$c45 = "<";
  var peg$c46 = "http";
  var peg$c47 = "s";
  var peg$c48 = "://";
  var peg$c49 = "?";
  var peg$c50 = "](";
  var peg$c51 = "$[";
  var peg$c52 = ".";
  var peg$c53 = ",";
  var peg$c54 = "=";
  var peg$c55 = "\r\n";

  var peg$r0 = /^[a-z0-9_+\-]/i;
  var peg$r1 = /^[a-z0-9]/i;
  var peg$r2 = /^[`\xB4]/;
  var peg$r3 = /^[a-z0-9_]/i;
  var peg$r4 = /^[.\-]/;
  var peg$r5 = /^[0-9]/;
  var peg$r6 = /^[ \u3000\t.,!?'"#:\/[\]\u3010\u3011()\u300C\u300D<>]/;
  var peg$r7 = /^[.,]/;
  var peg$r8 = /^[a-z0-9_\/:%#@$&?!~=+\-]/i;
  var peg$r9 = /^[a-z0-9_.]/i;
  var peg$r10 = /^[\r\n]/;
  var peg$r11 = /^[ \u3000\t\xA0]/;

  var peg$e0 = peg$anyExpectation();
  var peg$e1 = peg$literalExpectation(">", false);
  var peg$e2 = peg$literalExpectation("[", false);
  var peg$e3 = peg$literalExpectation("\u691C\u7D22", false);
  var peg$e4 = peg$literalExpectation("Search", true);
  var peg$e5 = peg$literalExpectation("]", false);
  var peg$e6 = peg$literalExpectation("```", false);
  var peg$e7 = peg$literalExpectation("\\[", false);
  var peg$e8 = peg$literalExpectation("\\]", false);
  var peg$e9 = peg$literalExpectation("<center>", false);
  var peg$e10 = peg$literalExpectation("</center>", false);
  var peg$e11 = peg$literalExpectation("<right>", false);
  var peg$e12 = peg$literalExpectation("</right>", false);
  var peg$e13 = peg$literalExpectation(":", false);
  var peg$e14 = peg$classExpectation([["a", "z"], ["0", "9"], "_", "+", "-"], false, true);
  var peg$e15 = peg$literalExpectation(":@", false);
  var peg$e16 = peg$literalExpectation("@", false);
  var peg$e17 = peg$literalExpectation("***", false);
  var peg$e18 = peg$literalExpectation("**", false);
  var peg$e19 = peg$literalExpectation("<b>", false);
  var peg$e20 = peg$literalExpectation("</b>", false);
  var peg$e21 = peg$literalExpectation("__", false);
  var peg$e22 = peg$classExpectation([["a", "z"], ["0", "9"]], false, true);
  var peg$e23 = peg$literalExpectation("<sup>", false);
  var peg$e24 = peg$literalExpectation("</sup>", false);
  var peg$e25 = peg$literalExpectation("<sub>", false);
  var peg$e26 = peg$literalExpectation("</sub>", false);
  var peg$e27 = peg$literalExpectation("<small>", false);
  var peg$e28 = peg$literalExpectation("</small>", false);
  var peg$e29 = peg$literalExpectation("<i>", false);
  var peg$e30 = peg$literalExpectation("</i>", false);
  var peg$e31 = peg$literalExpectation("*", false);
  var peg$e32 = peg$literalExpectation("_", false);
  var peg$e33 = peg$literalExpectation("~~", false);
  var peg$e34 = peg$literalExpectation("~", false);
  var peg$e35 = peg$literalExpectation("<s>", false);
  var peg$e36 = peg$literalExpectation("</s>", false);
  var peg$e37 = peg$literalExpectation("`", false);
  var peg$e38 = peg$classExpectation(["`", "\xB4"], false, false);
  var peg$e39 = peg$literalExpectation("\\(", false);
  var peg$e40 = peg$literalExpectation("\\)", false);
  var peg$e41 = peg$literalExpectation("-", false);
  var peg$e42 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true);
  var peg$e43 = peg$classExpectation([".", "-"], false, false);
  var peg$e44 = peg$literalExpectation("#", false);
  var peg$e45 = peg$literalExpectation("\uFE0F", false);
  var peg$e46 = peg$literalExpectation("\u20E3", false);
  var peg$e47 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e48 = peg$literalExpectation("(", false);
  var peg$e49 = peg$literalExpectation(")", false);
  var peg$e50 = peg$literalExpectation("\u300C", false);
  var peg$e51 = peg$literalExpectation("\u300D", false);
  var peg$e52 = peg$classExpectation([" ", "\u3000", "\t", ".", ",", "!", "?", "'", "\"", "#", ":", "/", "[", "]", "\u3010", "\u3011", "(", ")", "\u300C", "\u300D", "<", ">"], false, false);
  var peg$e53 = peg$literalExpectation("<", false);
  var peg$e54 = peg$literalExpectation("http", false);
  var peg$e55 = peg$literalExpectation("s", false);
  var peg$e56 = peg$literalExpectation("://", false);
  var peg$e57 = peg$classExpectation([".", ","], false, false);
  var peg$e58 = peg$classExpectation([["a", "z"], ["0", "9"], "_", "/", ":", "%", "#", "@", "$", "&", "?", "!", "~", "=", "+", "-"], false, true);
  var peg$e59 = peg$literalExpectation("?", false);
  var peg$e60 = peg$literalExpectation("](", false);
  var peg$e61 = peg$literalExpectation("$[", false);
  var peg$e62 = peg$literalExpectation(".", false);
  var peg$e63 = peg$literalExpectation(",", false);
  var peg$e64 = peg$literalExpectation("=", false);
  var peg$e65 = peg$classExpectation([["a", "z"], ["0", "9"], "_", "."], false, true);
  var peg$e66 = peg$otherExpectation("beginning of line");
  var peg$e67 = peg$otherExpectation("end of line");
  var peg$e68 = peg$literalExpectation("\r\n", false);
  var peg$e69 = peg$classExpectation(["\r", "\n"], false, false);
  var peg$e70 = peg$otherExpectation("whitespace");
  var peg$e71 = peg$classExpectation([" ", "\u3000", "\t", "\xA0"], false, false);

  var peg$f0 = function(nodes) { return mergeText(nodes); };
  var peg$f1 = function(q) { return q; };
  var peg$f2 = function(head, tails) {
  	const children = applyParser([head, ...tails].join('\n'), 'fullParser');
  	return QUOTE(children);
  };
  var peg$f3 = function(line) {
  	const children = applyParser(line, 'fullParser');
  	return QUOTE(children);
  };
  var peg$f4 = function(text) { return text; };
  var peg$f5 = function() { return ''; };
  var peg$f6 = function(q, sp, key) {
  	return SEARCH(q, `${ q }${ sp }${ key }`);
  };
  var peg$f7 = function() { return text(); };
  var peg$f8 = function(lang, code) {
  	lang = lang.trim();
  	return CODE_BLOCK(code, lang.length > 0 ? lang : null);
  };
  var peg$f9 = function(formula) {
  	return MATH_BLOCK(formula.trim());
  };
  var peg$f10 = function(content) {
  	return CENTER(mergeText(content));
  };
  var peg$f11 = function(content) {
  	return RIGHT(mergeText(content));
  };
  var peg$f12 = function(name) {
  	return EMOJI_CODE(name);
  };
  var peg$f13 = function(name, host) {
  	return EMOJI_CODE(host ? `@${name}@${host}` : `@${name}`);
  };
  var peg$f14 = function() { return matchUnicodeEmoji(); };
  var peg$f15 = function() { return consumeDynamically(); };
  var peg$f16 = function() {
  	return UNI_EMOJI(text());
  };
  var peg$f17 = function(content) {
  	return FN('tada', { }, mergeText(content));
  };
  var peg$f18 = function(content) {
  	return BOLD(mergeText(content));
  };
  var peg$f19 = function(content) {
  	const parsedContent = applyParser(content, 'inlineParser');
  	return BOLD(parsedContent);
  };
  var peg$f20 = function(content) {
  	return SUP(mergeText(content));
  };
  var peg$f21 = function(content) {
  	return SUB(mergeText(content));
  };
  var peg$f22 = function(content) {
  	return SMALL(mergeText(content));
  };
  var peg$f23 = function(content) {
  	return ITALIC(mergeText(content));
  };
  var peg$f24 = function(content) {
  	const parsedContent = applyParser(content, 'inlineParser');
  	return ITALIC(parsedContent);
  };
  var peg$f25 = function(content) {
  	return STRIKE(mergeText(content));
  };
  var peg$f26 = function(content) {
  	return INLINE_CODE(content);
  };
  var peg$f27 = function(content) {
  	return MATH_INLINE(content);
  };
  var peg$f28 = function(name, host) {
  	return MENTION(name, host, text());
  };
  var peg$f29 = function() {
  	return text();
  };
  var peg$f30 = function(content) {
  	return HASHTAG(content);
  };
  var peg$f31 = function(url) {
  	return N_URL(url, true);
  };
  var peg$f32 = function(url) {
  	return N_URL(url);
  };
  var peg$f33 = function(silent, label, url) {
  	return LINK((silent != null), url, mergeText(label));
  };
  var peg$f34 = function() { return text(); /* text node */ };
  var peg$f35 = function(name) { return ensureFnName(name); };
  var peg$f36 = function(name, args, content) {
  	args = args || {};
  	return FN(name, args, mergeText(content));
  };
  var peg$f37 = function(head, tails) {
  	const args = { };
  	for (const pair of [head, ...tails]) {
  		args[pair.k] = pair.v;
  	}
  	return args;
  };
  var peg$f38 = function(k, v) {
  	return { k, v };
  };
  var peg$f39 = function(k) {
  	return { k: k, v: true };
  };
  var peg$f40 = function() { return location().start.column == 1; };

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$resultsCache = {};

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsefullParser() {
    var s0, s1, s2, s3, s4;

    var key = peg$currPos * 64 + 0;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s4 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s4 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    peg$silentFails--;
    if (s4 !== peg$FAILED) {
      peg$currPos = s3;
      s3 = undefined;
    } else {
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      s4 = peg$parsefull();
      if (s4 !== peg$FAILED) {
        s2 = s4;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      if (input.length > peg$currPos) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      peg$silentFails--;
      if (s4 !== peg$FAILED) {
        peg$currPos = s3;
        s3 = undefined;
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parsefull();
        if (s4 !== peg$FAILED) {
          s2 = s4;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseplainParser() {
    var s0, s1, s2, s3, s4;

    var key = peg$currPos * 64 + 1;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s4 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s4 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    peg$silentFails--;
    if (s4 !== peg$FAILED) {
      peg$currPos = s3;
      s3 = undefined;
    } else {
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      s4 = peg$parseplain();
      if (s4 !== peg$FAILED) {
        s2 = s4;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      if (input.length > peg$currPos) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      peg$silentFails--;
      if (s4 !== peg$FAILED) {
        peg$currPos = s3;
        s3 = undefined;
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseplain();
        if (s4 !== peg$FAILED) {
          s2 = s4;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseinlineParser() {
    var s0, s1, s2, s3, s4;

    var key = peg$currPos * 64 + 2;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
